<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/frmBorder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_border_tv">

        <TextView
            android:id="@+id/tvPhotoEditorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColor="#000000"
            android:textSize="18sp"
            tools:text="Burhanuddin"
            tools:textColor="@android:color/black" />

    </FrameLayout>

    <ImageView
        android:id="@+id/imgPhotoEditorClose"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_gravity="top|start"
        android:elevation="1dp"
        android:src="@drawable/ic_remove"
        android:contentDescription="@string/close"
        tools:targetApi="lollipop" />

</FrameLayout>
