...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_text_done_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
...
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/add_text_edit_text"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add_text_color_picker_relative_layout"
        android:layout_below="@+id/add_text_done_tv"
        android:background="@null"
...
